# QTSimple_TCP_Server-Client

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  client.h  logger.cpp  logger.h  server.cpp  server.h  server_plex.cpp  server_plex.h  serverudp.cpp  serverudp.h  widget.cpp  widget.h  widget.ui
